--- a/style.css
+++ b/style.css
@@ -1,4 +1,20 @@
 *{
     padding: 0;
     margin:  0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+h1{
+    margin-left: 166px;
+}
+p{
+    margin-bottom: 30px;
+    text-align: center;
+    width: 900px;
+    margin-left: 166px;
+    text-align: justify;
+}
+img{
+    width: 900px;
+    margin-left: 170px;
+    align-content: center;
 }
