--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 }
 h1{
     margin-left: 166px;
+    margin-bottom: 6px;
 }
 p{
     margin-bottom: 30px;
@@ -17,4 +18,5 @@ img{
     width: 900px;
     margin-left: 170px;
     align-content: center;
+    margin-bottom: 20px;
 }
